<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconapp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_mypresence"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:fontFamily="@font/carter_one"
            android:textSize="30sp"
            android:textColor="@color/old_blue"
            android:gravity="center_horizontal"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:text="Email" />

        <EditText
            android:id="@+id/edt_regemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ex_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"/>

        <EditText
            android:id="@+id/edt_regnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_user"
            android:maxLines="1"
            android:singleLine="true" />
        <TextView
            android:id="@+id/tv_dept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="Departemen"/>
        <Spinner
            android:id="@+id/spinner_dept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jabatan"
            android:layout_marginTop="8dp"/>
        <Spinner
            android:id="@+id/spinner_jab"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_regpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edtcustom1"
                android:text="Daftar"
                android:textAlignment="center"
                android:textColor="@color/white_color" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>