<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/iconapp"
        android:layout_marginTop="@dimen/padding"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/icon_mypresence"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding"
        android:fontFamily="@font/carter_one"
        android:textSize="30sp"
        android:textColor="@color/old_blue"
        android:gravity="center_horizontal"
        android:text="@string/app_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/em_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/blue_color"
            android:outlineSpotShadowColor="@color/blue_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_emlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="12dp"
                android:textColorHighlight="#2196F3"
                android:textColorHint="#2196F3"
                android:textColorLink="#03A9F4"
                android:textCursorDrawable="@drawable/edtcustom1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_lock" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_pwd_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/old_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHighlight="#2196F3"
                android:textColorHint="@color/blue_color"
                android:textColorLink="#03A9F4"
                android:textCursorDrawable="@drawable/edtcustom1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edtcustom1"
            android:inputType="textCapSentences"
            android:text="@string/login"
            android:textColor="@color/white_color"
            android:textSize="8pt"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/txt_cracount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:text="@string/create_account"
            android:textColor="@color/blue_color"
            android:visibility="visible"
            />
    </LinearLayout>

</LinearLayout>